--- a/views/blocks/script.jade
+++ b/views/blocks/script.jade
@@ -2,9 +2,11 @@ script(type="application/javascript", src="http://code.jquery.com/jquery-2.1.4.m
 script(type="application/javascript", src="../javascripts/script.js")
 
 script(type="text/javascript").
-	var $zoho= $zoho || {salesiq:{values:{},ready:function(){}}};var d=document;s=d.createElement("script");
-	s.type="text/javascript";
-	s.defer=true;s.src="https://salesiq.zoho.com/computronik/float.ls?embedname=computronik";
-	t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);
+	document.addEventListener('DOMContentLoaded',function(){
+		var $zoho= $zoho || {salesiq:{values:{},ready:function(){}}};var d=document;s=d.createElement("script");
+		s.type="text/javascript";
+		s.defer=true;s.src="https://salesiq.zoho.com/computronik/float.ls?embedname=computronik";
+		t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);
+	})
 
 
