--- a/public/scss/estilos.scss
+++ b/public/scss/estilos.scss
@@ -38,6 +38,7 @@
   $morado       :#762572;//#714e84;
   $fondo-gris :#F2F2F2;
   $verde      :#3fb24f;//darken(#76CC41,10);
+  $verde-mensaje      :#b8ff8d;
   $cafe       :#5E514E;
 
 // ESTILOS BASE
