se agrego hacemos a index

--- a/public/scss/estilos.scss
+++ b/public/scss/estilos.scss
@@ -21,6 +21,7 @@
   $azul        : #1ab6ef;     //#3D8EC4;
   $azul-oscuro : #255484;
   $azul-claro  : #3C8BC1;
+  $azul-subtitulo: #008cff;
   $negro       : #070D12;
   $naranja    :#dd4814;
   $amarillo    : #FFD533;
