--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,8 @@ extends layout
 block content
 	include blocks/header
 	include blocks/banner
+	section.hacemos
+		include blocks/hacemos
 	section#ofrecemos
 		include blocks/ofrecemos
 	include blocks/footer
