--- a/views/blocks/promocion.jade
+++ b/views/blocks/promocion.jade
@@ -6,8 +6,9 @@ section.ed-container.promocion_kis
 		.ed-item.tablet-50
 			p Estas a punto de obtener el mejor antivirus del mundo al menor precio, Sí, KASPERSKY es el mejor antivirus que tú puedes tener. a tan solo 
 			p.promocion_kis_precio
-				span $28 
+				span $39 
 				span Dólares
+				span.promocion_kis_precio_iva Incluye IVA
 			h3.promocion_kis_sub-title ¡Empecemos! 
 			p Descarga el instalador desde el siguiente enlace
 			a.promocion_kis_link-kis(href="https://mega.nz/#!xkwEyCaI!BxQOUmiB9Yk27sFP_72bOvkiELznKjiMuQlWiecYy_g" target="_blank") Descarga por MEGA.
@@ -28,16 +29,16 @@ section.ed-container.promocion_kis
 				input(type="hidden" name="cmd" value="_s-xclick")
 				input(type="hidden" name="hosted_button_id" value="Q39JCPE9NLCJ6")
 				input( type="image" src="https://www.paypalobjects.com/es_XC/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!")
-				p.promocion_kis_nota *Este metodo de pago tiene una comision del 7% | Valor final $29.96
+				//- p.promocion_kis_nota *Este metodo de pago tiene una comision del 7% | Valor final $51.36
 			h4 Continua con la confirmación
 			p Una vez echo el pago envíanos el comprobante a
 				a.promocion_kis_correo(href="mailto:info@computronik.com.ec") info@computronik.com.ec
-				|, luego de verificarlo te enviaremos tu código en un plazo no mayor a 15 minutos.
+				|, luego de verificarlo te enviaremos tu código en un plazo no mayor a 5 minutos.
 			h3.promocion_kis_sub-title ¿ Quieres pagarlo en efectivo ?
 			p Estamos en el Valle de los Chillos, Sector La Armenia, Calle Luis Felipe Borja N12-315 y Sebastian de Benalcazar Local #2 (Diagonal al parque de la Armenia)
 			
 		.ed-item.tablet-50.promocion_kis_imagen
 			figure
-				img(src="http://computronik.com.ec/sites/default/files/promo%20kis.png")
-			figcaption Descuento Noviembre 2015 | Kaspersky Internet Security
+				img(src="..//images/promocion/kaspersky.png")
+			figcaption Descuento Enero 2016 | Kaspersky Internet Security
 			include llamanos
