--- a/views/blocks/promocion.jade
+++ b/views/blocks/promocion.jade
@@ -24,11 +24,11 @@ section.ed-container.promocion_kis
 				li Cta. 5275649400 - Ahorros
 				li A nombre de:
 					em William E. Guamán
-			h4 Tambien puedes pagar por PayPal
-			form(action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top")
-				input(type="hidden" name="cmd" value="_s-xclick")
-				input(type="hidden" name="hosted_button_id" value="Q39JCPE9NLCJ6")
-				input( type="image" src="https://www.paypalobjects.com/es_XC/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!")
+			//- h4 Tambien puedes pagar por PayPal
+			//- form(action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top")
+			//- 	input(type="hidden" name="cmd" value="_s-xclick")
+			//- 	input(type="hidden" name="hosted_button_id" value="Q39JCPE9NLCJ6")
+			//- 	input( type="image" src="https://www.paypalobjects.com/es_XC/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!")
 				//- p.promocion_kis_nota *Este metodo de pago tiene una comision del 7% | Valor final $51.36
 			h4 Continua con la confirmación
 			p Una vez echo el pago envíanos el comprobante a
