--- a/views/blocks/promocion.jade
+++ b/views/blocks/promocion.jade
@@ -24,15 +24,23 @@ section.ed-container.promocion_kis
 				li Cta. 5275649400 - Ahorros
 				li A nombre de:
 					em William E. Guamán
-			//- h4 Tambien puedes pagar por PayPal
+			h4 Tambien puedes pagar por PayPal
+			form(action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top")
+				input(type="hidden" name="cmd" value="_s-xclick")
+				input(type="hidden" name="hosted_button_id" value="Q39JCPE9NLCJ6")
+				input(type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!")
+				img(alt="" border="0" src="https://www.paypalobjects.com/es_XC/i/scr/pixel.gif" width="1" height="1")
+
+
+
 			//- form(action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top")
 			//- 	input(type="hidden" name="cmd" value="_s-xclick")
 			//- 	input(type="hidden" name="hosted_button_id" value="Q39JCPE9NLCJ6")
 			//- 	input( type="image" src="https://www.paypalobjects.com/es_XC/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!")
-				//- p.promocion_kis_nota *Este metodo de pago tiene una comision del 7% | Valor final $51.36
+			//- 	p.promocion_kis_nota *Este metodo de pago tiene una comision del 7% | Valor final $51.36
 			h4 Continua con la confirmación
 			p Una vez echo el pago envíanos el comprobante a
-				a.promocion_kis_correo(href="mailto:info@computronik.com.ec") info@computronik.com.ec
+				a.promocion_kis_correo(href="mailto:cobranzas@computronik.com.ec") cobranzas@computronik.com.ec
 				|, luego de verificarlo te enviaremos tu código en un plazo no mayor a 5 minutos.
 			h3.promocion_kis_sub-title ¿ Quieres pagarlo en efectivo ?
 			p Estamos en el Valle de los Chillos, Sector La Armenia, Calle Luis Felipe Borja N12-315 y Sebastian de Benalcazar Local #2 (Diagonal al parque de la Armenia)
