--- a/public/scss/tema/_menus.scss
+++ b/public/scss/tema/_menus.scss
@@ -11,14 +11,14 @@
 		padding: 0;
 		border-bottom: none;
 		a{
-			transition: all .3s;
+			transition: all .45s;
 			color: $gris-oscuro;
 			font-weight: $light;
 			text-align: center;
-			font-size: .9rem;
+			font-size: .95rem;
 			text-transform: uppercase;
 			&:hover{
-				color: $rojo;
+				background: $rojo;
 				/* &:after{
 					content: "";
 					position: absolute;
@@ -66,4 +66,7 @@
 			margin-left: .6rem;
 		}
 	}
+}
+.link_menu:visited{
+	background: $rojo;
 }
