--- a/views/blocks/contacto.jade
+++ b/views/blocks/contacto.jade
@@ -20,6 +20,7 @@
 	.ed-item.tablet-50.datos__contacto__correo
 		
 		a.datos__contacto__correo__email(href="mailto:info@computronik.com.ec") info@computronik.com.ec
+		a.datos__contacto__correo__email(href="mailto:soporte@computronik.com.ec") soporte@computronik.com.ec
 		a.promocion_kis_call-skype.icon-skype(href="skype:computronik_ec?call") Llámanos gratis
 	.ed-item
 		.datos__contacto__redes-sociales
