--- a/views/blocks/header.jade
+++ b/views/blocks/header.jade
@@ -2,6 +2,6 @@ header#header
 	.ed-container.abcenter
 		.ed-item.tablet-25
 			a(href='/')
-				img(src="../images/logo-cpk.png", alt="Logo computronik")
+				img(src="../images/logo-nuevo-cpk.png", alt="Logo computronik")
 		include menu
 			
