arreglo de logo

--- a/public/scss/tema/_header.scss
+++ b/public/scss/tema/_header.scss
@@ -4,9 +4,10 @@
 	}
 	margin-bottom: .6rem;
 	text-align: center;
+	padding-top: .5rem
 	a{
 	}
 	img{
-		max-width: 170px;
+		max-width: 240px;
 	}
 }
