--- a/public/scss/tema/_banner.scss
+++ b/public/scss/tema/_banner.scss
@@ -24,7 +24,7 @@
 			text-shadow: 0 2px .3rem black;
 		}
 		@media screen and (min-width: 500px) {
-			background-color: darken(rgba($rojo,.8),10);
+			// background-color: darken(rgba($rojo,.8),10);
 			.title{
 				font-size: $h1--font-size;
 			}
