cambio en el banner

--- a/public/scss/estilos.scss
+++ b/public/scss/estilos.scss
@@ -36,9 +36,9 @@
   //$link-color   :steelblue;
   $magenta      :#2D3739;
   $skype        :#7FBA00;
-  $morado       :#762572;//#714e84;
+  $morado       :#530068;//#714e84;
   $fondo-gris :#F2F2F2;
-  $verde      :#3fb24f;//darken(#76CC41,10);
+  $verde      :#7ab51e;//darken(#76CC41,10);
   $verde-mensaje      :#b8ff8d;
   $cafe       :#5E514E;
 
