--- a/views/blocks/banner.jade
+++ b/views/blocks/banner.jade
@@ -2,5 +2,7 @@
 	.ed-item
 		.banner.main__banner
 			.banner__mensaje
-				h2.banner__title.title Soporte técnico informático a Hogares y Empresas
-				h3.banner__subtitle.subtitle Sin dolores de cabeza
+				h2.banner__title.title Soporte técnico informático a  Hogares y Empresas
+				div.banner__mensaje__subtitle
+					a.banner__mensaje__mail(href="mailto:soporte@computronik.com.ec") soporte@computronik.com.ec
+					p.banner__mensaje__nota Respondemos a la velocidad de la luz.
