--- a/views/blocks/menu.jade
+++ b/views/blocks/menu.jade
@@ -1,5 +1,5 @@
 .ed-item.menu-cpk.tablet-75
-	span.icon-menu.menu-mobil Menú
+	span.icon-menu.menu-mobil 
 	ul.ed-menu.menu
 		each item in ['servicios','promocion','blog','pichincha-mi-vecino','contactanos','login']
 			li: a.link_menu(href='/#{item}') #{item}
