--- a/public/scss/tema/_header.scss
+++ b/public/scss/tema/_header.scss
@@ -1,8 +1,12 @@
 #header{
-	
+	position: fixed;
+	top:0;
+	left:0;
+	right:0;
+	z-index:300;
 	margin-bottom: .6rem;
 	text-align: center;
-	
+	background:rgba(#fff, .95);
 
 	@media screen and (min-width: 680px) {
 		background-size: 100%;
